force-app/main/default/src/objects/PJN_Network_Record_Type_Mapping__mdt/PJN_Network_Record_Type_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Object record type to Veeva Network entity type mapping</description>
    <label>Network Record Type Mapping</label>
    <pluralLabel>Network Record Type Mappings</pluralLabel>
</CustomObject>