force-app/main/default/src/objects/PJN_Network_Record_Type_Mapping__mdt/fields/PJN_Network_Object_Setting__c.field-meta.xml
<CustomField>
    <fullName>PJN_Network_Object_Setting__c</fullName>
    <label>Network Object Setting</label>
    <referenceTo>PJN_Network_Object_Setting__mdt</referenceTo>
    <relationshipLabel>Network Record Type Mappings</relationshipLabel>
    <relationshipName>PJN_Network_Record_Type_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>