force-app/main/default/src/objects/PJN_Network_Record_Type_Mapping__mdt/fields/PJN_Network_Record_SubType__c.field-meta.xml
<CustomField>
    <fullName>PJN_Network_Record_SubType__c</fullName>
    <description>Network Record type described on HCP/HCO type.</description>
    <label>Network Record SubType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>