force-app/main/default/src/objects/PJN_Network_Record_Type_Mapping__mdt/fields/PJN_Network_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Network_Record_Type__c</fullName>
    <description>Veeva Network entity type</description>
    <label>Network Record Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>