force-app/main/default/src/objects/PJN_Network_Record_Type_Mapping__mdt/fields/PJN_Outbound__c.field-meta.xml
<CustomField>
    <fullName>PJN_Outbound__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Salesforce to Veeva Network</description>
    <label>Outbound?</label>
    <type>Checkbox</type>
</CustomField>