force-app/main/default/src/objects/PJN_Network_Record_Type_Mapping__mdt/fields/PJN_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Record_Type_Name__c</fullName>
    <description>Salesforce record type developer name</description>
    <label>Record Type Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>